{
  "version": 4,
  "terraform_version": "1.1.6",
  "serial": 69,
  "lineage": "a54d1784-6728-67c2-fa57-44657e3cbafc",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "PrivateServer",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-123456",
            "arn": "arn:aws:ec2:us-east-1::instance/i-981fe557726534d49",
            "associate_public_ip_address": false,
            "availability_zone": "us-east-1a",
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "get_password_data": false,
            "id": "i-981fe557726534d49",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.nano",
            "ipv6_address_count": 0,
            "key_name": "app",
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-5b1e3bcb",
            "private_dns": "ip-10-0-1-4.ec2.internal",
            "private_ip": "10.0.1.4",
            "public_dns": "None",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 0,
                "throughput": 0,
                "volume_id": "vol-937b15dc",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-ebdce840",
            "tags": {
              "Environment": "localstack",
              "Name": "PrivateServer-0"
            },
            "tags_all": {
              "Environment": "localstack",
              "Name": "PrivateServer-0"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-493b7072c29140249"
            ]
          },
          "dependencies": [
            "aws_key_pair.server",
            "aws_security_group.web_server",
            "data.aws_availability_zones.available",
            "module.Network.aws_subnet.private",
            "module.Network.aws_vpc.this",
            "module.Network.aws_vpc_ipv4_cidr_block_association.this",
            "tls_private_key.server"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-123456",
            "arn": "arn:aws:ec2:us-east-1::instance/i-33291733bcc3f6a30",
            "associate_public_ip_address": false,
            "availability_zone": "us-east-1b",
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "get_password_data": false,
            "id": "i-33291733bcc3f6a30",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.nano",
            "ipv6_address_count": 0,
            "key_name": "app",
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-1c4c5856",
            "private_dns": "ip-10-0-2-4.ec2.internal",
            "private_ip": "10.0.2.4",
            "public_dns": "None",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 0,
                "throughput": 0,
                "volume_id": "vol-f5fb6ac1",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-1dcba69b",
            "tags": {
              "Environment": "localstack",
              "Name": "PrivateServer-1"
            },
            "tags_all": {
              "Environment": "localstack",
              "Name": "PrivateServer-1"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-493b7072c29140249"
            ]
          },
          "dependencies": [
            "aws_key_pair.server",
            "aws_security_group.web_server",
            "data.aws_availability_zones.available",
            "module.Network.aws_subnet.private",
            "module.Network.aws_vpc.this",
            "module.Network.aws_vpc_ipv4_cidr_block_association.this",
            "tls_private_key.server"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-123456",
            "arn": "arn:aws:ec2:us-east-1::instance/i-0b92c38fac356c37f",
            "associate_public_ip_address": false,
            "availability_zone": "us-east-1c",
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "get_password_data": false,
            "id": "i-0b92c38fac356c37f",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.nano",
            "ipv6_address_count": 0,
            "key_name": "app",
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-1aec7f6e",
            "private_dns": "ip-10-0-3-4.ec2.internal",
            "private_ip": "10.0.3.4",
            "public_dns": "None",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 0,
                "throughput": 0,
                "volume_id": "vol-8c10c5b5",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-2cb3c01b",
            "tags": {
              "Environment": "localstack",
              "Name": "PrivateServer-2"
            },
            "tags_all": {
              "Environment": "localstack",
              "Name": "PrivateServer-2"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-493b7072c29140249"
            ]
          },
          "dependencies": [
            "aws_key_pair.server",
            "aws_security_group.web_server",
            "data.aws_availability_zones.available",
            "module.Network.aws_subnet.private",
            "module.Network.aws_vpc.this",
            "module.Network.aws_vpc_ipv4_cidr_block_association.this",
            "tls_private_key.server"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "PublicServer",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-123456",
            "arn": "arn:aws:ec2:us-east-1::instance/i-973d5bfb14bc9f236",
            "associate_public_ip_address": false,
            "availability_zone": "us-east-1a",
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "get_password_data": false,
            "id": "i-973d5bfb14bc9f236",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.nano",
            "ipv6_address_count": 0,
            "key_name": "app",
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-24552291",
            "private_dns": "ip-10-0-101-6.ec2.internal",
            "private_ip": "10.0.101.6",
            "public_dns": "None",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 0,
                "throughput": 0,
                "volume_id": "vol-d7649518",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-dda14a52",
            "tags": {
              "Environment": "localstack",
              "Name": "PublicServer-0"
            },
            "tags_all": {
              "Environment": "localstack",
              "Name": "PublicServer-0"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-487a58cb436bde77f"
            ]
          },
          "dependencies": [
            "aws_key_pair.server",
            "aws_security_group.server",
            "data.aws_availability_zones.available",
            "module.Network.aws_subnet.public",
            "module.Network.aws_vpc.this",
            "module.Network.aws_vpc_ipv4_cidr_block_association.this",
            "tls_private_key.server"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "localstack",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": []
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener_rule",
      "name": "static",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": []
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group_attachment",
      "name": "localstack",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]"
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "server",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:000000000000:security-group/sg-487a58cb436bde77f",
            "description": "Allow TLS inbound traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "allow outbound traffic",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-487a58cb436bde77f",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "ssh",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "localstack-server",
            "name_prefix": "",
            "owner_id": "000000000000",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-34c4df6f"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.Network.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "web_server",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:000000000000:security-group/sg-493b7072c29140249",
            "description": "Allow TLS inbound traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "allow outbound traffic",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-493b7072c29140249",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "http",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "localstack-web-server",
            "name_prefix": "",
            "owner_id": "000000000000",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-34c4df6f"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.Network.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.Network",
      "mode": "managed",
      "type": "aws_default_network_acl",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:000000000000:network-acl/acl-16cd0a66",
            "default_network_acl_id": "acl-16cd0a66",
            "egress": [
              {
                "action": "allow",
                "cidr_block": "",
                "from_port": 0,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "::/0",
                "protocol": "-1",
                "rule_no": 101,
                "to_port": 0
              },
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": null,
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              }
            ],
            "id": "acl-16cd0a66",
            "ingress": [
              {
                "action": "allow",
                "cidr_block": "",
                "from_port": 0,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "::/0",
                "protocol": "-1",
                "rule_no": 101,
                "to_port": 0
              },
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": null,
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              }
            ],
            "owner_id": "000000000000",
            "subnet_ids": [
              "subnet-1dcba69b",
              "subnet-2cb3c01b",
              "subnet-52daf039",
              "subnet-aebbc5d9",
              "subnet-dda14a52",
              "subnet-ebdce840"
            ],
            "tags": {
              "Environment": "myapp",
              "Name": "network-default",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "myapp",
              "Name": "network-default",
              "Terraform": "true"
            },
            "vpc_id": "vpc-34c4df6f"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.Network.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.Network",
      "mode": "managed",
      "type": "aws_default_route_table",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:000000000000:route-table/rtb-456ccf3d",
            "default_route_table_id": "rtb-456ccf3d",
            "id": "rtb-456ccf3d",
            "owner_id": "000000000000",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Environment": "myapp",
              "Name": "network-default",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "myapp",
              "Name": "network-default",
              "Terraform": "true"
            },
            "timeouts": {
              "create": "5m",
              "update": "5m"
            },
            "vpc_id": "vpc-34c4df6f"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.Network.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.Network",
      "mode": "managed",
      "type": "aws_default_security_group",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:000000000000:security-group/sg-34165df6d5279c02f",
            "description": "default VPC security group",
            "egress": [],
            "id": "sg-34165df6d5279c02f",
            "ingress": [],
            "name": "default",
            "name_prefix": "",
            "owner_id": "000000000000",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "myapp",
              "Name": "network-default",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "myapp",
              "Name": "network-default",
              "Terraform": "true"
            },
            "vpc_id": "vpc-34c4df6f"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.Network.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.Network",
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-9cff62fd",
            "association_id": "eipassoc-0d170151",
            "domain": "vpc",
            "id": "eipalloc-9cff62fd",
            "network_interface": "eni-d41aba1b",
            "private_dns": "ip-10-41-153-122.ec2.internal",
            "private_ip": "10.41.153.122",
            "public_dns": "ec2-127-35-94-33.compute-1.amazonaws.com",
            "public_ip": "127.35.94.33",
            "tags": {
              "Environment": "myapp",
              "Name": "network-us-east-1a",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "myapp",
              "Name": "network-us-east-1a",
              "Terraform": "true"
            },
            "vpc": true
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.Network.aws_internet_gateway.this",
            "module.Network.aws_vpc.this",
            "module.Network.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.Network",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:000000000000:internet-gateway/igw-f0669051",
            "id": "igw-f0669051",
            "owner_id": "000000000000",
            "tags": {
              "Environment": "myapp",
              "Name": "network",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "myapp",
              "Name": "network",
              "Terraform": "true"
            },
            "vpc_id": "vpc-34c4df6f"
          },
          "dependencies": [
            "module.Network.aws_vpc.this",
            "module.Network.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.Network",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-9cff62fd",
            "association_id": "eipassoc-0d170151",
            "connectivity_type": "public",
            "id": "nat-644a61b8a57550a04",
            "network_interface_id": "eni-d41aba1b",
            "private_ip": "10.41.153.122",
            "public_ip": "127.35.94.33",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-dda14a52",
            "tags": {
              "Environment": "myapp",
              "Name": "network-us-east-1a",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "myapp",
              "Name": "network-us-east-1a",
              "Terraform": "true"
            }
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.Network.aws_eip.nat",
            "module.Network.aws_internet_gateway.this",
            "module.Network.aws_subnet.public",
            "module.Network.aws_vpc.this",
            "module.Network.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.Network",
      "mode": "managed",
      "type": "aws_route",
      "name": "private_nat_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-71c2d5211080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-644a61b8a57550a04",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-71c2d521",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null,
              "update": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.Network.aws_eip.nat",
            "module.Network.aws_internet_gateway.this",
            "module.Network.aws_nat_gateway.this",
            "module.Network.aws_route_table.private",
            "module.Network.aws_subnet.public",
            "module.Network.aws_vpc.this",
            "module.Network.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.Network",
      "mode": "managed",
      "type": "aws_route",
      "name": "public_internet_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-f0669051",
            "id": "r-rtb-b237ddea1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-b237ddea",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null,
              "update": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.Network.aws_internet_gateway.this",
            "module.Network.aws_route_table.public",
            "module.Network.aws_vpc.this",
            "module.Network.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.Network",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:000000000000:route-table/rtb-71c2d521",
            "id": "rtb-71c2d521",
            "owner_id": "000000000000",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-644a61b8a57550a04",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Environment": "myapp",
              "Name": "network-private",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "myapp",
              "Name": "network-private",
              "Terraform": "true"
            },
            "timeouts": null,
            "vpc_id": "vpc-34c4df6f"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.Network.aws_vpc.this",
            "module.Network.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.Network",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:000000000000:route-table/rtb-b237ddea",
            "id": "rtb-b237ddea",
            "owner_id": "000000000000",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-f0669051",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Environment": "myapp",
              "Name": "network-public",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "myapp",
              "Name": "network-public",
              "Terraform": "true"
            },
            "timeouts": null,
            "vpc_id": "vpc-34c4df6f"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.Network.aws_vpc.this",
            "module.Network.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.Network",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-26444f92",
            "route_table_id": "rtb-71c2d521",
            "subnet_id": "subnet-ebdce840"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.Network.aws_route_table.private",
            "module.Network.aws_subnet.private",
            "module.Network.aws_vpc.this",
            "module.Network.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-c2f262ca",
            "route_table_id": "rtb-71c2d521",
            "subnet_id": "subnet-1dcba69b"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.Network.aws_route_table.private",
            "module.Network.aws_subnet.private",
            "module.Network.aws_vpc.this",
            "module.Network.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-c2a4b6ec",
            "route_table_id": "rtb-71c2d521",
            "subnet_id": "subnet-2cb3c01b"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.Network.aws_route_table.private",
            "module.Network.aws_subnet.private",
            "module.Network.aws_vpc.this",
            "module.Network.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.Network",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-76ec8f01",
            "route_table_id": "rtb-b237ddea",
            "subnet_id": "subnet-dda14a52"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.Network.aws_route_table.public",
            "module.Network.aws_subnet.public",
            "module.Network.aws_vpc.this",
            "module.Network.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-31c84e71",
            "route_table_id": "rtb-b237ddea",
            "subnet_id": "subnet-aebbc5d9"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.Network.aws_route_table.public",
            "module.Network.aws_subnet.public",
            "module.Network.aws_vpc.this",
            "module.Network.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-ee05a177",
            "route_table_id": "rtb-b237ddea",
            "subnet_id": "subnet-52daf039"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.Network.aws_route_table.public",
            "module.Network.aws_subnet.public",
            "module.Network.aws_vpc.this",
            "module.Network.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.Network",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:000000000000:subnet/subnet-ebdce840",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-ebdce840",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "000000000000",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "myapp",
              "Name": "network-private-us-east-1a",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "myapp",
              "Name": "network-private-us-east-1a",
              "Terraform": "true"
            },
            "vpc_id": "vpc-34c4df6f"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.Network.aws_vpc.this",
            "module.Network.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:000000000000:subnet/subnet-1dcba69b",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-1dcba69b",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "000000000000",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "myapp",
              "Name": "network-private-us-east-1b",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "myapp",
              "Name": "network-private-us-east-1b",
              "Terraform": "true"
            },
            "vpc_id": "vpc-34c4df6f"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.Network.aws_vpc.this",
            "module.Network.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:000000000000:subnet/subnet-2cb3c01b",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1c",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.3.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-2cb3c01b",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "000000000000",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "myapp",
              "Name": "network-private-us-east-1c",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "myapp",
              "Name": "network-private-us-east-1c",
              "Terraform": "true"
            },
            "vpc_id": "vpc-34c4df6f"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.Network.aws_vpc.this",
            "module.Network.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.Network",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:000000000000:subnet/subnet-dda14a52",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.101.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-dda14a52",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "000000000000",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "myapp",
              "Name": "network-public-us-east-1a",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "myapp",
              "Name": "network-public-us-east-1a",
              "Terraform": "true"
            },
            "vpc_id": "vpc-34c4df6f"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.Network.aws_vpc.this",
            "module.Network.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:000000000000:subnet/subnet-aebbc5d9",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.102.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-aebbc5d9",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "000000000000",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "myapp",
              "Name": "network-public-us-east-1b",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "myapp",
              "Name": "network-public-us-east-1b",
              "Terraform": "true"
            },
            "vpc_id": "vpc-34c4df6f"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.Network.aws_vpc.this",
            "module.Network.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:000000000000:subnet/subnet-52daf039",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1c",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.103.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-52daf039",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "000000000000",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "myapp",
              "Name": "network-public-us-east-1c",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "myapp",
              "Name": "network-public-us-east-1c",
              "Terraform": "true"
            },
            "vpc_id": "vpc-34c4df6f"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.Network.aws_vpc.this",
            "module.Network.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.Network",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:000000000000:vpc/vpc-34c4df6f",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-16cd0a66",
            "default_route_table_id": "rtb-456ccf3d",
            "default_security_group_id": "sg-34165df6d5279c02f",
            "dhcp_options_id": "dopt-7a8b9c2d",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-34c4df6f",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-456ccf3d",
            "owner_id": "000000000000",
            "tags": {
              "Environment": "myapp",
              "Name": "network",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "myapp",
              "Name": "network",
              "Terraform": "true"
            }
          }
        }
      ]
    }
  ]
}